# drake

./: BUILD.bazel  DamrongNote.txt  SharkToyTetrahedra.vtk  SharkToyTetrahedra.vtk_pressure.vtk  clean_build_tmp.txt  embedded_pressure_field_v0.pvsm  yellow_pepper_embedded_signedDF.vtk  yellow_pepper_offset_and_grids.vtk
VegaFEM-v4.0_libraries_mesher/: README.txt
bindings/pydrake/: geometry_py_hydro.cc
bindings/pydrake/geometry/: geometry_py_meshes.cc  geometry_py_scene_graph.cc  geometry_py_visualizers.cc
bindings/pydrake/geometry/test/: meshes_test.py  scene_graph_test.py  visualizers_test.py
bindings/pydrake/multibody/: plant_py.cc
examples/14789_NaN_gradient_SignedDistancePair/: BUILD.bazel  NaN_grad.cc
examples/clutter/: clutter_teleop_sim.py
examples/clutter/models/: cylinder.sdf  table.sdf
examples/hydroelastic/python_ball_paddle/: contact_sim_demo.py
examples/hydroelastic/python_nonconvex_compliant_mesh/: BUILD.bazel  bowl.sdf  drop_pepper.py  floatie.sdf  floatie_full.vtk  pepper.sdf  table.sdf
examples/hydroelastic/python_nonconvex_mesh/: 3D_Dollhouse_Happy_Brother.mtl  3D_Dollhouse_Happy_Brother.sdf  3D_Dollhouse_Happy_Brother_tetwild_tetgen.vtk  BUILD.bazel  bowl.sdf  bunny_fixed.vtk  double_halfspaces.sdf  drop_pepper.py  grids.sdf  pepper.sdf  shark.mtl  shark.sdf  shark_combined_refined_sdf.sdf
examples/hydroelastic/python_nonconvex_mesh/shark_toy_64pieces/: model.sdf
examples/multibody/bunny/: BUILD.bazel  README.md  bunny.cc
examples/multibody/deformable_torus/: BUILD.bazel  deformable_torus.cc
examples/multibody/rolling_sphere/: README.md
examples/scene_graph/: BUILD.bazel  contact_surface_thin_object.cc
geometry/: BUILD.bazel  geometry_state.h  meshcat.cc  meshcat.h  proximity_engine.cc  proximity_engine.h  query_object.cc  query_object.h
geometry/benchmarking/: mesh_intersection_benchmark.cc
geometry/proximity/: BUILD.bazel  bvh.cc  bvh.h  bvh_to_vtk.cc  bvh_to_vtk.h  calc_signed_distance_to_surface_mesh.cc  calc_signed_distance_to_surface_mesh.h  compute_contact_volume.cc  compute_contact_volume.h  contact_surface_utility.cc  distance_to_point_callback.cc  distance_to_point_callback.h  distance_to_shape_callback.cc  distance_to_shape_callback.h  distance_to_shape_touching.cc  empress.cc  empress0.cc  empress1.cc  empress2.cc  example_from_VTK.cc  feature_normal_set.cc  feature_normal_set.h  hydroelastic_callback.h  hydroelastic_internal.cc  hydroelastic_internal.h  make_box_mesh.h  make_ellipsoid_mesh.h  make_empress_field.cc  make_empress_field.h  make_mesh_from_vtk.cc  make_mesh_from_vtk.h  mesh_intersection.cc  mesh_intersection.h  mesh_to_vtk.cc  mesh_to_vtk.h  mtetm.cc  obb.cc  obb.h  optimize_sdfield.cc  optimize_sdfield.h  (+14 more)
geometry/proximity/test/: bunny_mesh_refiner_test.cc  bvh_test.cc  calc_signed_distance_to_surface_mesh_test.cc  compute_contact_volume_test.cc  contact_surface_test.cc  distance_sphere_to_shape_test.cc  distance_to_point_callback_test.cc  distance_to_shape_touching_test.cc  embedded_pressure_field_test.cc  feature_normal_set_test.cc  hydroelastic_internal_test.cc  make_box_mesh_test.cc  make_ellipsoid_mesh_test.cc  mesh_intersection_test.cc  mtetm_test.py  obb_test.cc  polygon_to_triangle_mesh_test.cc  surface_to_volume_mesh_debugtest.cc  surface_to_volume_mesh_test.cc  temp_volume_coarsener_test.cc  volume_mesh_refiner_test.cc  vtk_to_volume_mesh_test.cc
geometry/query_results/: contact_surface.cc  contact_surface.h
geometry/test/: 016.vtk  3D_Dollhouse_Happy_Brother_CDT.vtk  Android_Lego.mtl  MA-027-AY-0006_bubble35mm_coarse_250faces_fTetWild.vtk  MA-027-AY-0006_pawframe_fTetWild.vtk  MA-081-PT-0003_chest_centerslice_plus5mm_fine_fTetWild.vtk  cube_corners_tet.vtk  cube_with_hole_tet.vtk  mesh_12vert_20tet_2IntV.vtk  mesh_28vert_52tet.vtk  meshcat_test.cc  pepper_r0.005_sdf.vtk  pepper_r0.005_sdf_optimize.vtk  proximity_engine_test.cc  sergey_combined.vtk  yellow_pepper_EmPress_mesh.vtk  yellow_pepper_EmPress_optimized_sdfield.vtk  yellow_pepper_Offset1cmGrid2cm_tetgen.vtk  yellow_pepper_offset_and_grids_tetgen.vtk
multibody/fixed_fem/dev/: BUILD.bazel  run_simple_gripper.cc
multibody/meshcat/: hydroelastic_contact_visualizer.cc
multibody/plant/: contact_results.cc  contact_results.h  multibody_plant.cc  multibody_plant.h
tmp/: BUILD.bazel  basicAlgorithms.h  boundingBox.cpp  delaunayMesher.cpp  delaunayMesher.h  disjointSet.cpp  edgeKey.h  eig3.cpp  mat3d.cpp  mat3d.h  objMesh.cpp  objMeshOrientable.cpp  octree.h  predicates.cpp  predicates.h  predicates_Shewchuk.c  tetMesh.cpp  tetMesher.cpp  tetMesher_dependency.txt  triangle.cpp  triangle.h  tribox3.cpp  vec2d.h  vega_cdt.cc  vega_cdt.h  vega_mesh_to_drake_mesh.cc  vega_mesh_to_drake_mesh.h  volumetricMesh.cpp  volumetricMesh.h  volumetricMeshENuMaterial.cpp  volumetricMeshMooneyRivlinMaterial.cpp  volumetricMeshOrthotropicMaterial.cpp  volumetricMeshParser.cpp
tmp/test/: tetMesher_test.cc  vega_cdt_test.cc  vega_mesh_to_drake_mesh_test.cc
tmp_Sergey_run_demo/: BUILD.bazel  run_demo.py
tools/skylark/: drake_cc.bzl
tools/workspace/models_internal/: files.bzl  package.BUILD.bazel  repository.bzl
tools/workspace/vtk_internal/: repository.bzl  settings.bzl
tutorials/: BUILD.bazel  BoxBoxTouchDemo.ipynb  SharkToyOneMesh.sdf  SharkToyRefine.vtk  authoring_multibody_simulation.ipynb  box_on_box.ipynb  cube.vtk  debug_ComputeSignedDistancePair.ipynb  experiment_CCM_contact_surfaces.ipynb  hydro_compliant_cylinder_compliant_box.ipynb  hydro_lots_of_peppers.ipynb  hydroelastic_contact_nonconvex_mesh.ipynb  hydroelastic_contact_shark_toy.ipynb  hydroelastic_cuboids.ipynb  hydroelastic_embpres.ipynb  play_SignedDistance_EDContact.ipynb  shark_toy.mtl  test_ContactVolumes.ipynb  test_EDContact_BoxBowl.ipynb  test_EnergyDensityContact.ipynb  yellow_pepper_EmPress_optimized_sdfield.vtk  yellow_pepper_EmPress_sdfield.vtk  yellow_pepper_Offset1cmGrid2cm_sdfield.vtk
tutorials/asset_files/: cuboid.sdf  cuboid.vtk  peg.sdf  peg.vtk
tutorials/images/: 2023-03-31_EulerDisk_hydro_compliant_cylinder_box.html
(+20 files in other folders)
